# IDORbuster

./: .gitignore  Cargo.toml  README.md  credentials.json  idor_auto.sh
src/: README.md  idor.rs  main.rs
